# ProjectThesis

./: README.md  pyproject.toml
Aruco_dataset/models/: cnn_40f_rand.keras  cnn_lstm_40f_rand.keras  gru_40f_rand.keras  lstm_40f_rand.keras
Yolo_dataset/models/: TS_40F_CNN.keras  TS_40F_CNN_plus_LSTM.keras  TS_40F_GRU.keras  TS_40F_LSTM.keras
